[tool.poetry]
name = "test_task"
version = "0.1.0"
description = ""
authors = ["WUDenis <denis.pashnev@wesoftyou.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
